--- a/proyectoIML/src/app/components/footer/footer.component.html
+++ b/proyectoIML/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Scroll-to-top -->
-<img src="../../../assets/images/iconScroll.png" id="myBtn" onclick="topFunction()" alt="iconArrow">
+<img style="width: auto; height: auto;" src="../../../assets/images/iconScroll.png" id="myBtn" onclick="topFunction()" alt="iconArrow">
 
 <!-- Sección whatsapp -->
 <div class="container">
