--- a/proyectoIML/src/app/components/footer/footer.component.css
+++ b/proyectoIML/src/app/components/footer/footer.component.css
@@ -27,9 +27,10 @@
     right: 20px; 
     z-index: 99;
     outline: none;
-    background-color: black;
+    background-color: rgb(68, 169, 200);
     cursor: pointer;
     border-radius: 50%;
     width: 55px;
     height: 55px;
+    padding: 10px;
   }
